🔣😅 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>RPS Game</title>
     <!-- Link CSS here -->
-    <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -73,6 +73,6 @@
     <!-- Link JQuery here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- Link script.js here -->
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
